--- a/utm-builder.html
+++ b/utm-builder.html
@@ -48,11 +48,8 @@
     <p>Tracking URL:</p>
     <textarea id="generatedUrl" rows="4" cols="50"></textarea>
     <input type="button" value="Copy URL" onclick="copyToClipboard()" style="background-color: #28a745; color: white;">
-
   
-    
-    <script>
-        // JavaScript code will go here
-    </script>
+
+    <script src="script.js"></script>
 </body>
 </html>
