--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <h1>Tracking URL Builder for Pardot</h1>
     <form id="utmForm">
-        <label for="campaignName">Campaign Name:</label>
+        <label for="campaignName">Community Name:</label>
         <select id="campaignName" name="campaignName">
             <option value="arcadian-grove">arcadian-grove</option>
             <option value="ara-hills">ara-hills</option>
